--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -18,6 +18,8 @@
 
     font-family: var(--fonte-tudo);
     color: var(--cor-fonte);
+
+    scroll-behavior: smooth;
 }
 
 @media screen and (min-width: 768px) {
