Adicionado nova variável de cor

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,6 +3,7 @@
     --background-azul: rgba(88,138,135,0.35);
 
     --azul: #588a87;
+    --verde-100: #2e5a57;
     --branco: #FFFFFF;
     --preto-30: #C8C8C8;
     --preto-50: #A2A2A2;
